Воркер: вызов метода у интерфейса