@@ -1,7 +1,7 @@
 package org.example.worker;
 
+import org.example.test.Schedualable;
 
-import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
 public class TaskWorker implements Runnable {
@@ -13,12 +13,11 @@ public class TaskWorker implements Runnable {
         this.threadCount = threadCount;
     }
 
-    public void executeTask(String task, Map<String, String> params) {
+    public void executeTask(String taskName, Map<String, String> params) {
         try {
-            Object o = Class.forName(task).newInstance();
-            o.getClass().getMethod("execute", Map.class).invoke(o, params);
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException |
-                 InvocationTargetException e) {
+            Schedualable task = (Schedualable) Class.forName(taskName).getDeclaredConstructor().newInstance();
+            task.execute(params);
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
@@ -29,8 +28,8 @@ public class TaskWorker implements Runnable {
 
     @Override
     public void run() {
-        System.out.println("Initializing worker with category " + category + ", with " + threadCount + " thread(s) " +
-                Thread.currentThread());
+//        System.out.println("Initializing worker with category " + category + ", with " + threadCount + " thread(s) " +
+//                Thread.currentThread());
         ;
 //        while (!Thread.currentThread().isInterrupted()){
 //            List<ScheduledTask> scheduledTaskList = taskService.getPendingTasksByType(category);
